# CubeSat-ADCS-old

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  SunVecReference_Update_Dec_17_2020.cpp  adcsDataPackages.h  main.cpp
C++/: SunVecReference_Update_Dec_17_2020.cpp
CubeSat-ADCS/: CMakeLists.txt  CubeSat-ADCS.sln  CubeSat-ADCS.vcxproj  CubeSat-ADCS.vcxproj.filters  IGRF12.txt  main.cpp
IGRF12/rsrc/: IGRF12.h  IGRF12.txt
IGRF12/src/: IGRF12.cpp
Matlab/: comparison_test.m
Matlab/EKF/: EKF_function_with_RWs_asym.m  EKF_with_RWs_asym_drv.m  KF_desired.txt  actual.txt  skew.m  x_hat_kk_matlab.txt
Matlab/EKF_RW/: EKF_function_with_RW.m  EKF_with_RW_drv.m  P_kk_matlab.txt  u.txt  y.txt
Matlab/IGRF12/: 2015_IGRF.txt  IGRF_rjb_V2.m  calc_factorial.m  calc_legendre.m  compare_rjb_Matlab_V2.m  z21.m
Matlab/IGRF13/: 2020_IGRF.txt  IGRF_rjb_V3.m  IGRF_rjb_V3_validation.m  IGRF_rjb_V3_validation_nocompare.m  compare_rjb_Matlab_V3.m
Matlab/IGRF13/Inputs/: IGRF_validation_input_V2.txt  IGRF_validation_input_V2.xlsx
Matlab/IGRF13/Outputs/: validation_output_cpp_compare.txt  validation_output_matlab_nocompare.txt
Matlab/Nadir/: ECI2NadirQuat.m  q_NPI_matlab.txt
Matlab/Q_Method/: q_Method.m  q_Method_Test_Data.mat  q_Method_script_test.m  q_est_matlab.txt
Matlab/Sun_Vector/: Sun_Test_Data.mat  Sun_vector_estimate_script_test.m
Matlab/Sun_Vector_Estimate/: Sun_vector_estimate.m  s_BF_est.txt  s_hat_BF_matlab.txt  y.txt
Matlab/Sun_Vector_Reference/: ADCS_SunVecEst.m  README.txt
Source/: CMakeLists.txt  CubeSat_ADCSConfig.h.in  Errors.h  JSON.cpp  JSON.h  Timer.cpp  Timer.h  data.h  main  main.cpp  main.h  main_test.cpp  main_test.h  test_UART.sh
Source/Bdot/: Bdot.cpp  Bdot.h  Bdot_test.cpp  CMakeLists.txt
Source/Communications/: CMakeLists.txt  adcsDataPackages.hpp  communications.cpp
Source/EKF/: CMakeLists.txt  Extended_Kalman_Filter.cpp  Extended_Kalman_Filter.h  Extended_Kalman_Filter_RW.cpp  Extended_Kalman_Filter_RW.h  Extended_Kalman_filter_RW.cpp  Readme.txt  u.txt
Source/EKF/Inputs/: y.txt
Source/EKF/Testing/: EKF_cpp_ver_plot.m  EKF_function_with_gyro.m  EKF_with_gyro_drv_w_cpp_test.m  desired.txt  x_hat_kk_cpp.txt  y.txt
Source/EKF/validation/: EKF_test.cpp
Source/EKF/validation/Inputs/: u.txt  y.txt
Source/EKF/validation/Outputs/: P_kk_cpp.txt  x_hat_kk_cpp.txt
Source/EKF_RW/: Extended_Kalman_Filter_RW.cpp  Extended_Kalman_Filter_RW.h  Readme.txt  u.txt  x_hat_kk_cpp.txt  y.txt
Source/EKF_RW/Outputs/: x_hat_kk_cpp.txt
Source/IGRF/: CMakeLists.txt  IGRF13.txt  IGRF13_COEFF.h  igrf.cpp  igrf.h
Source/IGRF12/: CMakeLists.txt  igrf12.cpp  igrf12.hpp  igrf12_parse.cpp  igrf_parse.cpp  legendre  legendre.cpp
Source/Nadir/: CMakeLists.txt  Nadir.cpp  Nadir.h
Source/Nadir/validation/: Nadir_test.cpp
Source/Nadir/validation/Inputs/: i.txt
Source/PDcontroller/: CMakeLists.txt  PDcontroller.cpp  PDcontroller.h
Source/Q_Method/: CMakeLists.txt  Q_Method.cpp  Q_Method.h
Source/Q_Method/validation/: Q_Method_test.cpp
Source/Q_Method/validation/Outputs/: q_est_cpp.txt
Source/Sun_Vector_Reference/: CMakeLists.txt  SunVecReference_Update_Dec_17_2020.cpp  sun_vector_reference.cpp  sun_vector_reference.h
Source/Sun_Vector_Reference/verification/: sun_vector_reference_test.cpp
Source/Test/: CMakeLists.txt  legendreTest.cpp  main.cpp
Source/Tests/: CMakeLists.txt  Tests.cpp
Source/UART/: CMakeLists.txt  UART.cpp  UART.h  UART_core.c
Source/sunVector/: CMakeLists.txt  Sun_Vector_Estimate.cpp  Sun_Vector_Estimate.h
Source/sunVector/validation/: Sun_Vector_Estimate_test.cpp
Source/sunVector/validation/Outputs/: s_hat_BF_cpp.txt
Test/: CMakeLists.txt
Validation/EKF_RW/Inputs/: u.txt
Validation/EKF_RW/Outputs/: P_kk_cpp.txt
Validation/Nadir/: Nadir_test.cpp
Validation/Nadir/Inputs/: RAAN.txt  omega.txt
Validation/Nadir/Outputs/: q_NPI_cpp.txt
Validation/Q_Method/Inputs/: b1.txt  b2.txt  r1.txt  r2.txt
Validation/sunVector/: Sun_Vector_Estimate_test.cpp
Validation/sunVector/Inputs/: H.txt
resource/IGRF12/: IGRF12.h
source/IGRF12/: IGRF12.cpp
